kubernetes/apps/flink/flink/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flink
  namespace: flink
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hosts:
    - "*.flink.${SECRET_DOMAIN}"
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: flink-operator-flink-operator.flink.svc.cluster.local
            port:
              number: 80
